# level2_nlp_mrc-nlp-12

./: .gitignore  README.md  pyproject.toml  setup.py
code/: arguments.py  inference.sh  run.sh
code/retriever/: retrieval_dense.py
code/retriever/dpr/: data_loaders.py  model.py  trainer.py
code/utils/: utils.py
